--- a/pages/lprocedures/lprocedures.wxml
+++ b/pages/lprocedures/lprocedures.wxml
@@ -1,10 +1,7 @@
 <import src="../../libs/weimport.wxml"/>
-<view class="page">
-  <view wx:if="{{fLength}}" class="page__bd">
-    <template is="tabsCk" data="{{ fLength , pageCk , tabs ,wWidth }}"/>
-  </view>
-  <view class="page__bd">
-    <template is="tabPanel" data="{{ tPage: fLength ? mPage[pageCk] : mPage , pageData , pNo }}"/>
+<view class="page" id="{{pNo}}">
+  <view class="page__bd" id="{{dObjectId}}">
+    <template is="tabPanel" data="{{ tPage: mPage , pageData , pNo }}"/>
   </view>
   <view class="page__ft">
     <navigator url="/inputedit/fprocedure/fprocedure?pNo={{pNo}}&artId={{dObjectId}}">
