--- a/inputedit/import/impedit.wxml
+++ b/inputedit/import/impedit.wxml
@@ -49,13 +49,12 @@
 </template>
 
 <template name="i_listsel">
-  <view  class="weui-cell">
-    <picker id="ac-{{n}}" mode="selector" value="{{c}}" range="{{aList}}" bindchange="i_listsel">
+  <picker id="ac-{{n}}" name="{{gname}}" mode="selector" value="{{c}}" range="{{aList}}" bindchange="i_listsel">
+    <view  class="weui-cell">
       <view class="weui-cell__hd">{{p}}:</view>
       <view class="weui-cell__bd">{{aList[c]}}</view>
-    </picker>
-  </view>
-  <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
+    </view>
+  </picker>
 </template>
 
 <template name="i_sId">
@@ -146,7 +145,6 @@
   <navigator url="/inputedit/import/addressedit?reqName={{gname}}">
     <view class="weui-cell">{{p}}:{{c.sName}}</view>
   </navigator>
-  <input hidden="true" name="{{gname}}" value="{{c}}"/>
 </template>
 
 <template name="i_eDetail">
@@ -225,7 +223,7 @@
     <view class="weui-cell__bd">{{apdv['s'+apdclist[aVl[0]].st[aVl[1]].ct[aVl[2]]] }}</view>
     <view class="weui-cell__ft"><button id="su-{{n}}" data-ca="{{apdclist[aVl[0]].st[aVl[1]].ct[aVl[2]]}}" data-sa="{{apdv['s'+apdclist[aVl[0]].st[aVl[1]].ct[aVl[2]]]}}" bindtap="f_aslist" size="mini">确定</button></view>
   </view>
-    <picker-view id="pa-{{n}}" indicator-class="weui-picker__indicator" mask-class="weui-picker__mask" value="{{aVl}}" bindtap="f_aslist">
+    <picker-view id="pa-{{n}}" class="weui-picker__view" indicator-class="weui-picker__indicator" mask-class="weui-picker__mask" value="{{aVl}}" bindchange="f_aslist">
         <picker-view-column>
             <view wx:for="{{apdclist}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
         </picker-view-column>
@@ -247,7 +245,6 @@
       <button id="ac-{{n}}" data-ca="{{wewxs.glist(indlist,aVl,2)}}" data-sa="{{apdv['s'+wewxs.glist(indlist,aVl,2)]}}" size="mini" bindtap="f_arrsel">确定</button>
     </view>
   </view>
-  <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
   <view hidden="{{inclose}}">
     <picker-view id="pa-{{n}}" class="weui-picker__view" indicator-class="weui-picker__indicator" mask-class="weui-picker__mask" value="{{aVl}}" bindchange="f_arrsel">
         <picker-view-column>
@@ -271,7 +268,6 @@
       <button id="ac-{{n}}" id="ac-{{n}}" data-ca="{{assclist[aVl[0]].st[aVl[1]].ct[aVl[2]]}}" data-sa="{{assv['s'+assclist[aVl[0]].st[aVl[1]].ct[aVl[2]]]}}" size="mini" bindtap="f_arrsel">确定</button>
     </view>
   </view>
-  <view hidden="true"><input name="{{gname}}" value="{{c}}" /></view>
   <view hidden="{{inclose}}">
     <picker-view id="pa-{{n}}" class="weui-picker__view" indicator-class="weui-picker__indicator" mask-class="weui-picker__mask" value="{{aVl}}" bindchange="f_arrsel">
       <picker-view-column>
@@ -295,7 +291,6 @@
       <button id="ac-{{n}}" data-ca="{{aVl[0]+''+aVl[1]+aVl[2]}}" data-sa="{{objects[sId].surface[aVl[0]]+objects[sId].size[aVl[1]]+objects[sId].weight[aVl[2]]}}" bindtap="f_arrsel" size="mini">>确定</button>
     </view>
   </view>
-  <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
   <view hidden="{{inclose}}">
     <picker-view id="pa-{{n}}" class="weui-picker__view" indicator-class="weui-picker__indicator" mask-class="weui-picker__mask" value="{{aVl}}" bindchange="f_arrsel">
         <picker-view-column>
@@ -329,9 +324,8 @@
       <button id="ac-{{n}}" data-ca="{{objarr[osv[0]].slaveId[osv[1]]}}" bindtap="f_objsel" size="mini">>确定</button>
     </view>
   </view>
-  <view hidden="true"><input name="{{gname}}" value="{{c}}" /></view>
   <view hidden="{{inclose}}">
-    <picker-view id="pa-{{n}}" indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{osv}}" bindchange="s_objsel">
+    <picker-view id="pa-{{n}}" class="weui-picker__view"  indicator-class="weui-picker__indicator" mask-class="weui-picker__mask" value="{{osv}}" bindchange="s_objsel">
       <picker-view-column>
           <view wx:for="{{objarr}}" wx:key="{{index}}" style="line-height: 36rpx">{{master[item.masterId]}}</view>
       </picker-view-column>
@@ -344,12 +338,12 @@
 
 <template name="i_MS">
   <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
-  <view class="weui-cell weui-cell_input">
-    <navigator url="/util/mapsunit/mapsunit?reqNumber={{n}}">
+  <navigator url="/util/mapsunit/mapsunit?reqNumber={{n}}">
+    <view class="weui-cell weui-cell_input">
       <view class="weui-cell__hd">{{p}}:</view>
-      <view class="weui-cell__ft">{{e}}</view>
-    </navigator>
-  </view>
+      <view class="weui-cell__bd">{{e}}</view>
+    </view>
+  </navigator>
 </template>
 
 <template name="i_table">
