--- a/pages/vprocedure/vprocedure.wxml
+++ b/pages/vprocedure/vprocedure.wxml
@@ -7,7 +7,7 @@
   </view>
 
   <view wx:if="{{uEV}}" class="page__ft weui-footer_fixed-bottom">
-    <button class="weui-btn" style="display:inline-block" type="primary" size="mini" id="fModify" bindtap="fEditProcedure">修改并重新审批</button>
+    <button wx:if="{{enUpdate}}" class="weui-btn" style="display:inline-block" type="primary" size="mini" id="fModify" bindtap="fEditProcedure">修改并重新审批</button>
     <button class="weui-btn" style="display:inline-block" type="primary" size="mini" id="fTemplate">以此为模板新建</button>
   </view>
 </view>
