--- a/index/production/production.wxml
+++ b/index/production/production.wxml
@@ -8,25 +8,27 @@
   <view class="page__bd">
     <template is="showgrids" data="{{grids}}"/>
   </view>
-  <view class="weui-tab">
+  <view class="weui-panel weui-panel_access">
     <block wx:for="{{mPage}}" wx:key="{{index}}" wx:for-item="ac">
-      <view class="weui-cells">
-        <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{ac}}" bindtap="indexClick">
-          <template is="{{ iClicked==ac ? 'selecticon1' : 'selecticon2'}}" />
-          <view class="weui-cell">{{pageData[ac].uName}}</view>
-          <view class="weui-cell">产量{{mSum[ac][0]}}份,库存{{mSum[ac][0]}}份</view>
+      <view class="weui-panel__hd">
+      <view class="weui-media-box weui-media-box_small-appmsg">
+        <view class="weui-cells weui-cells_in-small-appmsg">
+          <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{ac}}" bindtap="indexClick">
+            <view class="weui-cell__hd">{{pageData[ac].uName}}</view>
+            <view class="weui-cell__bd weui-cell_primary">产量{{mSum[ac][0]}}份,库存{{mSum[ac][0]}}份</view>
+            <view hidden="{{iClicked==ac}}" class="weui-cell__ft weui-cell__ft_in-access"></view>
+          </view>
         </view>
       </view>
-      <view hidden="{{iClicked!=ac}}" wx:for="{{pageData[ac].cargo}}" wx:key="{{index}}">
-        <navigator url="/page/vprocedure/vprocedure?pNo={{pNo}}&artId={{item}}&uId={{cargo[item].unitId}}">
-          <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active">
-            <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-              <image class="weui-media-box__thumb" src="{{cargo[item].thumbnail}}" background-size="cover"></image>
-            </view>
-            <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-              <view class="weui-media-box__title">{{cargo[item].uName}}</view>
-              <view class="weui-media-box__desc">产量{{cargo[item].yield}},库存{{cargo[item].cargoStock}}</view>
-            </view>
+      </view>
+      <view hidden="{{iClicked!=ac}}" wx:for="{{pageData[ac].cargo}}" wx:key="{{index}}" class="weui-panel__bd">
+        <navigator url="/page/vprocedure/vprocedure?pNo={{pNo}}&artId={{item}}&uId={{cargo[item].unitId}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+          <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+            <image class="weui-media-box__thumb" src="{{cargo[item].thumbnail}}" background-size="cover"></image>
+          </view>
+          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+            <view class="weui-media-box__title">{{cargo[item].uName}}</view>
+            <view class="weui-media-box__desc">产量{{cargo[item].yield}},库存{{cargo[item].cargoStock}}</view>
           </view>
         </navigator>
       </view>
