--- a/inputedit/import/impedit.wxml
+++ b/inputedit/import/impedit.wxml
@@ -288,7 +288,7 @@
     <view class="weui-cell__hd">{{p}}:</view>
     <view class="weui-cell__bd" id="se-{{n}}" bindtap="f_arrsel">{{ inclose ? c.sName : objects[sId].surface[aVl[0]]+objects[sId].size[aVl[1]]+objects[sId].weight[aVl[2]] }}</view>
     <view hidden="{{inclose}}" class="weui-cell__ft">
-      <button id="ac-{{n}}" data-ca="{{aVl[0]+''+aVl[1]+aVl[2]}}" data-sa="{{objects[sId].surface[aVl[0]]+objects[sId].size[aVl[1]]+objects[sId].weight[aVl[2]]}}" bindtap="f_arrsel" size="mini">>确定</button>
+      <button id="ac-{{n}}" data-ca="{{aVl[0]+''+aVl[1]+aVl[2]}}" data-sa="{{objects[sId].surface[aVl[0]]+objects[sId].size[aVl[1]]+objects[sId].weight[aVl[2]]}}" bindtap="f_arrsel" size="mini">确定</button>
     </view>
   </view>
   <view hidden="{{inclose}}">
