--- a/index/customer/customer.wxml
+++ b/index/customer/customer.wxml
@@ -3,7 +3,7 @@
 <view class="page">
   <view class="page__hd">
     <view class="page__title">销售情况总览</view>
-    <view class="page__desc">可供应量{{pandect[0]}}，预定未付款{{pandect[1]}}件，付款未发货{{pandect[2]}}件，发货未收到{{pandect[3]}}件，交货且签收{{pandect[4]}}件。</view>
+    <view class="page__desc">可供销售{{pandect[0]}}，预定未付款{{pandect[1]}}件，付款未发货{{pandect[2]}}件，发货未收到{{pandect[3]}}件，交货且签收{{pandect[4]}}件。</view>
   </view>
   <view class="page__bd">
     <template is="showgrids" data="{{grids}}"/>
