--- a/index/customer/customer.wxml
+++ b/index/customer/customer.wxml
@@ -3,7 +3,7 @@
 <view class="page">
   <view class="page__hd">
     <view class="page__title">销售情况总览</view>
-    <view class="page__desc">可供销售{{pandect[0]}}，预定未付款{{pandect[1]}}件，付款未发货{{pandect[2]}}件，发货未收到{{pandect[3]}}件，交货且签收{{pandect[4]}}件。</view>
+    <view class="page__desc">销量{{pandect[0]}}，预定未付款{{pandect[1]}}件，付款未发货{{pandect[2]}}件，发货未收到{{pandect[3]}}件，交货且签收{{pandect[4]}}件。</view>
   </view>
   <view class="page__bd">
     <template is="showgrids" data="{{grids}}"/>
@@ -14,7 +14,7 @@
         <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{ac}}" bindtap="indexClick">
           <template is="{{ iClicked==ac ? 'selecticon1' : 'selecticon2'}}" />
           <view class="weui-cell">{{pageData[ac].uName}}</view>
-          <view class="weui-cell">可供应量{{mSum[ac][0]}}份,付款未发货{{mSum[ac][2]}}份,交货且签收{{mSum[ac][4]}}份</view>
+          <view class="weui-cell">销量{{mSum[ac][0]}}份,付款未发货{{mSum[ac][2]}}份,交货且签收{{mSum[ac][4]}}份</view>
         </view>
       </view>
       <view hidden="{{iClicked!=ac}}" wx:for="{{pageData[ac].cargo}}" wx:key="{{index}}">
@@ -24,7 +24,7 @@
               <image class="weui-media-box__thumb" src="{{cargo[item].thumbnail}}" background-size="cover"></image>
             </view>
             <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-              <view class="weui-media-box__title">{{cargo[item].uName}}:可供应量{{cargo[item].canSupply}}</view>
+              <view class="weui-media-box__title">{{cargo[item].uName}}:销量{{cargo[item].sold}}</view>
               <view class="weui-media-box__desc">付款未发货{{cargo[item].payment}},交货且签收{{cargo[item].delivered}}</view>
             </view>
           </view>
