--- a/inputedit/import/impedit.wxml
+++ b/inputedit/import/impedit.wxml
@@ -117,7 +117,7 @@
       <view class="weui-label">{{p}}:</view>
     </view>
     <view class="weui-cell__bd">
-      <input id="dg-{{n}}" name="{{gname}}" value="{{c}}" class="weui-input" type="{{csc}}" bindblur="f_{{func ? func : csc}}"/>
+      <input id="dg-{{n}}" name="{{gname}}" value="{{c}}" class="weui-input" type="{{itype}}" bindblur="f_{{csc}}"/>
     </view>
   </view>
 </template>
@@ -319,18 +319,18 @@
 <template name="i_sObject">
   <view class="weui-cell">
     <view class="weui-cell__hd">{{p}}:</view>
-    <view class="weui-cell__bd" id="se-{{n}}" bindtap="f_objsel">{{slave[inclose ? c : objarr[osv[0]].slaveId[osv[1]]]}} </view>
+    <view class="weui-cell__bd" id="se-{{n}}" bindtap="f_objsel">{{slave[c ? c : objarr[osv[0]].slaveId[osv[1]]].uName}} </view>
     <view hidden="{{inclose}}" class="weui-cell__ft">
-      <button id="ac-{{n}}" data-ca="{{objarr[osv[0]].slaveId[osv[1]]}}" bindtap="f_objsel" size="mini">>确定</button>
+      <button id="ac-{{n}}" data-ca="{{objarr[osv[0]].slaveId[osv[1]]}}" bindtap="f_objsel" size="mini">确定</button>
     </view>
   </view>
   <view hidden="{{inclose}}">
-    <picker-view id="pa-{{n}}" class="weui-picker__view"  indicator-class="weui-picker__indicator" mask-class="weui-picker__mask" value="{{osv}}" bindchange="s_objsel">
+    <picker-view id="pa-{{n}}" class="weui-picker__view"  indicator-class="weui-picker__indicator" mask-class="weui-picker__mask" value="{{osv}}" bindchange="f_objsel">
       <picker-view-column>
-          <view wx:for="{{objarr}}" wx:key="{{index}}" style="line-height: 36rpx">{{master[item.masterId]}}</view>
+          <view wx:for="{{objarr}}" wx:key="{{index}}" style="line-height: 36rpx">{{master[item.masterId].uName}}</view>
       </picker-view-column>
       <picker-view-column>
-          <view wx:for="{{objarr[osv[0]].slaveId}}" wx:key="{{index}}" style="line-height: 36rpx">{{slave[item]}}</view>
+          <view wx:for="{{objarr[osv[0]].slaveId}}" wx:key="{{index}}" style="line-height: 36rpx">{{slave[item].uName}}</view>
       </picker-view-column>
     </picker-view>
   </view>
