--- a/libs/weui.wxss
+++ b/libs/weui.wxss
@@ -434,11 +434,11 @@ icon {
   margin: 0 0 .2em;
 }
 .weui-article__-2 {
-  padding-top: 12rpx;
+  /* padding-top: 12rpx; */
   color: #236B8E;
   font-size: 24rpx;
   text-align: center;
-  margin: 0 0 .3em;
+  /* margin: 0 0; .3em; */
 }
 .weui-article__-3 {
   font-size: 24rpx;
