--- a/index/manage/manage.wxml
+++ b/index/manage/manage.wxml
@@ -3,7 +3,7 @@
   <view class="page__hd">
     <swiper class="swiper_box" indicator-dots="{{false}}" autoplay="{{true}}">
       <block wx:for="{{mPage[0]}}" wx:key="{{index}}">
-          <navigator url="/pages/vprocedure/vprocedure?pNo=1&artId={{item.objectId}}">
+          <navigator url="/pages/vprocedure/vprocedure?pNo='articles'&artId={{item.objectId}}">
             <image src="{{pageData[item].thumbnail}}" class="swimage"></image>
             <view class="swtext">{{pageData[item].title}}</view>
           </navigator>
