--- a/index/production/production.wxml
+++ b/index/production/production.wxml
@@ -22,7 +22,7 @@
       </view>
       </view>
       <view hidden="{{iClicked!=ac}}" wx:for="{{pageData[ac].cargo}}" wx:key="{{index}}" class="weui-panel__bd">
-        <navigator url="/pages/vprocedure/vprocedure?pNo={{pNo}}&artId={{item}}&uId={{cargo[item].unitId}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+        <navigator url="/pages/vprocedure/vprocedure?pNo={{pNo}}&artId={{item}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
           <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
             <image class="weui-media-box__thumb" src="{{cargo[item].thumbnail}}" background-size="cover"></image>
           </view>
