--- a/inputedit/import/impedit.wxml
+++ b/inputedit/import/impedit.wxml
@@ -319,7 +319,7 @@
 <template name="i_sObject">
   <view class="weui-cell">
     <view class="weui-cell__hd">{{p}}:</view>
-    <view class="weui-cell__bd" id="se-{{n}}" bindtap="f_objsel">{{slave[c ? c : objarr[osv[0]].slaveId[osv[1]]].uName}} </view>
+    <view class="weui-cell__bd" id="se-{{n}}" bindtap="f_objsel">{{ c ? slave[c].uName : '点此进行选择' }}</view>
     <view hidden="{{inclose}}" class="weui-cell__ft">
       <button id="ac-{{n}}" data-ca="{{objarr[osv[0]].slaveId[osv[1]]}}" bindtap="f_objsel" size="mini">确定</button>
     </view>
