--- a/inputedit/distribution/distribution.wxml
+++ b/inputedit/distribution/distribution.wxml
@@ -4,7 +4,7 @@
   <view class="page__bd">
     <block wx:for="{{mPage}}" wx:key="{{index}}" wx:for-item="sp" wx:for-index="i">
     <view wx:if="{{pageData[sp].inSale}}">
-    <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active" id="{{sp}}" bindtap="indexClick">
+    <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active" id="{{sp}}" bindtap="clickSave">
       <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
         <image class="weui-media-box__thumb" src="{{pageData[sp].thumbnail}}" background-size="cover"></image>
       </view>
@@ -20,7 +20,7 @@
   <view class="page__bd">
     <block wx:for="{{mPage}}" wx:key="{{index}}" wx:for-item="mp" wx:for-index="i">
     <view wx:if="{{!pageData[mp].inSale}}">
-      <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active" id="{{mp}}" bindtap="indexClick">
+      <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active" id="{{mp}}" bindtap="clickSave">
         <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
           <image class="weui-media-box__thumb" src="{{pageData[mp].thumbnail}}" background-size="cover"></image>
         </view>
