--- a/index/communication/communication.wxml
+++ b/index/communication/communication.wxml
@@ -1,2 +1,2 @@
-<!--pages/customer/communication/communication.wxml-->
-<text>pages/customer/communication/communication.wxml</text>
+
+<text>communication.wxml</text>
