--- a/index/rcustomer/rcustomer.wxml
+++ b/index/rcustomer/rcustomer.wxml
@@ -1,4 +1,4 @@
-<import src="../../../libs/weimport.wxml"/>
+<import src="../../libs/weimport.wxml"/>
 <view class="page">
   <view class="page__hd">
     <button class="weui-btn" type="primary" bindtap="makphone">打电话给客户服务人员</button>
