--- a/index/workconnection/workconnection.wxml
+++ b/index/workconnection/workconnection.wxml
@@ -1,4 +1,4 @@
-<import src="../../../libs/weimport.wxml"/>
+<import src="../../libs/weimport.wxml"/>
 <view class="page">
   <view class="page__hd">
     <button class="weui-btn" type="primary" bindtap="makphone">通知</button>
